--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,7 @@
+@import "bower_components/bootstrap/scss/bootstrap.scss";
 @import "variables.scss";
 @import "fonts.scss";
+@import "_partials/layout.scss";
 @import "_partials/home.scss";
 @import "_partials/content.scss";
 
