--- a/app/styles/_partials/layout.scss
+++ b/app/styles/_partials/layout.scss
@@ -1,3 +1,12 @@
-header{
-    
+header {
+    .navbar {
+        .nav-flex {
+            .navbar-brand {
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+    }
 }
