--- a/app/styles/_partials/home.scss
+++ b/app/styles/_partials/home.scss
@@ -1,5 +1,13 @@
-#mapid { 
-    width: 800px;
-    height: 600px;
-}
+.wrap-home{
 
+    h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size : 22px;
+        text-align : center;
+    padding : 30px 0 0 0;
+    }
+    #map{
+        width : 100%;
+        height : 350px;
+    }
+}
