--- a/app/styles/_partials/layout.scss
+++ b/app/styles/_partials/layout.scss
@@ -3,6 +3,7 @@ header {
         padding : 0;
         padding-top : 15px;
         width : 100%;
+        margin : 0;
     
             justify-content : space-between;
             .navbar-brand {
@@ -17,4 +18,9 @@ header {
             }
         
     }
+}
+
+body{
+    height: 100%;
+
 }
