--- a/app/styles/_partials/home.scss
+++ b/app/styles/_partials/home.scss
@@ -4,32 +4,40 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 22px;
         text-align: center;
-        padding: 30px 0 0 0;
+        padding: 30px 0 15px 0;
+        color: $dark-grey;
+        border-bottom : 1px solid rgba($color: $dark-grey, $alpha: 0.2); 
+        margin-bottom : 30px;
+        span{
+            text-transform: uppercase;
+        }
+
     }
-    #map {        
+    #map {
         width: 100%;
         height: 70vh;
-        
     }
 }
 
-
-h4{
-    font-style : italic;
-    border-bottom : 1px solid #454545;
-    padding-bottom : 15px;
+h4 {
+    font-style: italic;
+    border-bottom: 1px solid #454545;
+    padding-bottom: 15px;
     font-size: 18px;
+    color: $dark-grey;
+
 }
-.info-bus{
-    padding-bottom : 15px;
-    .time{
-        font-weight : 700;
+
+.info-bus {
+    padding-bottom: 15px;
+    color: $dark-grey;
+    .time {
+        font-weight: 700;
     }
 }
 
-.leaflet-control-container{
-    display : none;
-
+.leaflet-control-container {
+    display: none;
 }
 
 .leaflet-popup {
@@ -37,33 +45,38 @@ h4{
     top: 0 !important;
     left: 0 !important;
     z-index: 10000;
-    width: 94vw;
+    width: 100vw;
     height: 94vh;
-    bottom : 0 !important;
-}
-
-.leaflet-popup-content-wrapper {
-    width: 100%;
-    box-shadow: none !important;
-    border: none !important;
-    height: 100%;
-}
-.leaflet-popup-tip{
-    box-shadow : none !important;
-    border : none !important;
-}
-.leaflet-popup-content {
-    width: 100% !important;
-    height: 80vh;
-    overflow-y: scroll;
-    margin : 0;
-    padding : 0;
-    border : 32px solid white;
-    
-}
-.leaflet-popup-close-button{
-    font-size : 25px;
-    position : absolute;
-    top: 10px;
-    left : 10px;
+    bottom: 0 !important;
+    color: $dark-grey;
+    .leaflet-popup-content-wrapper {
+        width: 100%;
+        box-shadow: none !important;
+        border: none !important;
+        height: 100%;
+    }
+    .leaflet-popup-tip {
+        box-shadow: none !important;
+        border: none !important;
+    }
+    .leaflet-popup-content {
+        width: 100% !important;
+        height: 80vh;
+        overflow-y: scroll;
+        margin: 0;
+        padding: 50px 50px;
+        border: 32px solid white;
+        color: $dark-grey;
+    }
+    .leaflet-popup-close-button {
+        font-size: 25px;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        color: $dark-grey;
+        padding: 45px 35px;
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
