--- a/app/styles/_partials/layout.scss
+++ b/app/styles/_partials/layout.scss
@@ -1,36 +1,39 @@
 header {
     .navbar {
-        padding : 0;
-        padding-top : 15px;
-        width : 100%;
-        margin : 0;
-        text-align : right;
-            justify-content : space-between;
-            .navbar-brand {
-                img {
-                    width: 100%;
-                    height: auto;
-                }
+        padding: 0;
+        padding-top: 15px;
+        width: 100%;
+        margin: 0;
+        text-align: right;
+        justify-content: space-between;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        .navbar-brand {
+            img {
+                width: 100%;
+                height: auto;
             }
-            .navbar-toggler{
-                border : none;
-                padding-top : 7px;
-
-            }
-            .navbar-collapse{
-                .navbar-nav{
-                    padding-top : 20px;
-                    .nav-item{
-
-                        .nav-link{
-                            padding-right : 20px;
-                            
-
-                        }
+        }
+        .navbar-toggler {
+            border: none;
+            padding-top: 7px;
+        }
+        .navbar-collapse {
+            .navbar-nav {
+                padding-top: 20px;
+                .nav-item {
+                    .nav-link {
+                        padding-right: 20px;
                     }
-
                 }
             }
+        }
     }
 }
 
+footer {
+    p {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding: 35px 0;
+        text-align: center;
+    }
+}
